# orrery

./: Cargo.toml  README.md  cfg3local.json
crates/orrery-net/: Cargo.toml
crates/orrery-server/: Cargo.toml  build.rs
crates/orrery-server/src/: api.rs  client.rs  lib.rs  main.rs  network.rs  raft.rs
crates/orrery-server/src/raft/: state.rs  store.rs
crates/orrery-store/: Cargo.toml
crates/orrery-store/src/: herd.rs  lib.rs  op.rs  partition.rs  sched.rs  sets.rs  storage.rs  sync.rs  table.rs  transaction.rs  vm.rs  work.rs
crates/orrery-store/src/sched/: tx_finished.rs
crates/orrery-store/src/transaction/: write_cache.rs
crates/orrery-wire/: Cargo.toml
crates/orrery-wire/src/: lib.rs
notes/: dsl.txt  dsl2.txt  part.txt  perf.txt
