[package]
name = "orrery-server"
version = "0.1.0"
edition = "2021"

[dependencies]
openraft = { version = "0.9.11", features = ["storage-v2", "serde"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
axum = "0.7.5"
tower = "0.4.13"
orrery-store = { path = "../orrery-store" }
orrery-wire = { path = "../orrery-wire" }
dashmap = { version = "5.5.3", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"