[package]
name = "orrery-store"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[dependencies]
proc-bitfield = "0.4.0"
slice-dst = "1.5.1"

rayon = "1.10.0"
crossbeam = "0.8.4"
dashmap = { version = "5.5.3", features = ["serde"] }
parking_lot = "0.12.3"
arc-swap = "1.7.1"
tokio = { version = "1.37.0", features = ["sync", "rt", "rt-multi-thread", "time"] }

rand = "0.9.0-alpha.1"
rand_chacha = "0.9.0-alpha.1"
serde = { version = "1.0.203", features = ["derive"] }

orrery-wire = { path = "../orrery-wire" }
serde_json = "1.0.117"

thiserror = "1.0.61"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde_json_any_key = "2.0.0"
